[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Dummy.gd" type="Script" id=1]
[ext_resource path="res://scenes/Scissor.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.684117
height = 1.01571

[sub_resource type="CapsuleShape" id=2]
radius = 0.808361
height = 1.10078

[node name="Dummy" type="KinematicBody" groups=[
"Dummy",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
shape = SubResource( 1 )

[node name="HitBox" type="Area" parent="."]
gravity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="HitBox"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.904757, 0 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Spatial" type="Spatial" parent="."]

[node name="Fire" type="Position3D" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2 )

[node name="Vision" type="Area" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="VisionPoly" type="CollisionPolygon" parent="Vision"]
transform = Transform( -1.62921e-07, 1, 0, 1.62921e-07, 2.65431e-14, -1, -1, -1.62921e-07, -1.62921e-07, 0, 0, -2 )
polygon = PoolVector2Array( 15, -15, 15, 15, 0, 15, 0, -15 )

[node name="DeathTimer" type="Timer" parent="."]

[node name="Scissor" parent="." instance=ExtResource( 2 )]
transform = Transform( -20, 0, 6.51683e-06, 0, 20, 0, -6.51683e-06, 0, -20, 0, 0, 0 )
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
